# OracleGuard

./: .gitignore  Cargo.toml  LICENSE  README.md
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml
crates/oracleguard-adapter/: Cargo.toml  README.md
crates/oracleguard-adapter/examples/: refresh_fixture_timestamps.rs  verify_live_bundle.rs
crates/oracleguard-adapter/src/: artifacts.rs  cardano.rs  cardano_disburse.rs  charli3.rs  charli3_aggregate.rs  kupo.rs  lib.rs  settlement.rs
crates/oracleguard-policy/: Cargo.toml  README.md
crates/oracleguard-policy/src/: authorize.rs  error.rs  evaluate.rs  lib.rs  math.rs
crates/oracleguard-schemas/: Cargo.toml  README.md
crates/oracleguard-schemas/src/: effect.rs  evidence.rs  lib.rs  oracle.rs  policy.rs  routing.rs
crates/oracleguard-schemas/tests/: provenance_non_interference.rs
crates/oracleguard-verifier/: Cargo.toml  README.md
crates/oracleguard-verifier/examples/: verify_bundles.rs
crates/oracleguard-verifier/src/: bundle.rs  integrity.rs  lib.rs  replay.rs  report.rs
deploy/preprod/: ada-usd-preprod.example.yml
docs/: architecture.md  authorization-gates.md  canonical-encoding.md  cluster-3-closeout.md  evaluator-contract.md  oracle-boundary.md  policy-canonicalization.md  ziranity-integration.md
docs/submission/: description-200.md  discord-post.md
fixtures/cardano/: tx_hash_sample.hex
fixtures/charli3/: sample_aggregate_cli_args.golden.txt
fixtures/evidence/: allow_700_ada_bundle.postcard  deny_900_ada_bundle.postcard
integrations/ziranity/: Cargo.toml
integrations/ziranity/fixtures/: oracleguard-node.sample.toml
integrations/ziranity/src/: lib.rs
scripts/: charli3_quiet.py  check_deps.sh  demo.sh  preflight.sh  rotated_policy_ref.py
