[package]
name = "oracleguard-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure deterministic release-cap evaluation for OracleGuard."

[dependencies]
oracleguard-schemas = { path = "../oracleguard-schemas" }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
postcard = { version = "=1.0.10", default-features = false, features = ["alloc"] }

[lints]
workspace = true
